# video_insertion

./: .gitignore  README.md  main.py  pyproject.toml
docs/: uv_doc.md
modules/detection/: detection.py
modules/matching/: depth_matching.py
modules/models/: detectron_models.py  matching_model.py
src/modules/detection/: detection.py
src/modules/models/: models.py
src/tests/: detection_test.py
src/utils/: get_video_first_frame.py
src/utils/visualization/: visualize_detection.py
src/video_insertion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: depth_estimate_test.py  detection_test.py  supervision_test.py
utils/visualization/: visualize_depth.py
video_insertion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
